[tool.poetry]
name = "psygpt-telegram"
version = "0.1.0"
description = "A drug-savvy Telegram bot that is built on OpenAI's GPT-4."
authors = ["sernyl <lex@sojourns.io>"]
license = "GPL V2"
readme = "README.md"
packages = [{include = "psygpt_telegram"}]

[tool.poetry.dependencies]
python = "3.11.4"
python-telegram-bot = "^20.4"
algoliasearch = "^3.0.0"
python-dotenv = "^1.0.0"
patreon = "^0.5.0"
supabase = "^1.0.4"
stripe = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
